--- a/extra/imglanding/style.css
+++ b/extra/imglanding/style.css
@@ -1,3 +1,13 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+a {
+    text-decoration: none;
+}
+.header {
+    height: 100px;
+}
 .link-header {
     font-weight: bold;
     font-size: 14px;
@@ -7,11 +17,13 @@
     font-weight: bold;
     font-size: 72px;
     line-height: 86px;
+    margin-bottom: 39px;
 }
 .text-title {
     font-weight: 600;
     font-size: 24px;
     line-height: 150%;
+    margin-bottom: 39px;
 }
 .button-signup {
     border-radius: 6px;
@@ -22,18 +34,44 @@
     line-height: 17px;
     color: #ED4C5C;
 }
-.subtitle {
+.subtitle-first {
     font-weight: 600;
     font-size: 36px;
     line-height: 43px;
     color: #000000;
+    margin-bottom: 24px;
 }
 .text {
     font-size: 14px;
     line-height: 140%;
+    margin-bottom: 14px;
 }
 .link {
     font-size: 14px;
     line-height: 140%;
     color: #ED4C5C;
+}
+.subtitle-first {
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 43px;
+    color: #000000;
+    margin-bottom: 63px;
+}
+.subtitle-third {
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 43px;
+    color: #000000;
+    margin-top: 33px;
+    margin-bottom: 20px;
+}
+.text-seven {
+    font-size: 14px;
+    line-height: 140%;
+    margin-bottom: 14px;
+    margin-bottom: 5px;
+}
+.footer {
+    height: 110px;
 }
