--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@ a {
 .header {
     height: 76px;
 }
-.header-link {
+.menu_link {
     font-size: 16px;
     line-height: 20px;
 }
-.header-link:hover {
+.menu_link:hover {
     text-decoration: underline;
     color: gray
 }
@@ -23,72 +23,69 @@ a {
     margin-top: 64px;
     margin-bottom: 16px;
 }
-.header-paragraph {
+.top_text {
     font-size: 24px;
     line-height: 32px;
     margin-bottom: 16px;
 }
-.link-catalog {
+.top_link {
     font-size: 16px;
     line-height: 24px;
 }
-.subtitle {
+.heading {
     font-weight: 600;
     font-size: 48px;
     line-height: 59px;
     color: #000000;
     margin-bottom: 32px;
 }
-.title-product {
+.product_heading {
     font-weight: 500;
     font-size: 24px;
     line-height: 29px;
     color: #000000;
     margin-bottom: 8px;
 }
-.product-description {
+.product_description {
     font-size: 14px;
     line-height: 17px;
     color: #888888;
     margin-bottom: 12px;
 }
-.price-new {
+.price {
     font-weight: 500;
     font-size: 24px;
     line-height: 29px;
     color: #050505;
 }
-.price-old {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 29px;
+.price_old {
     text-decoration-line: line-through;
     color: #888888;
 }
-.title-footer {
+.footer_heading {
     font-weight: 500;
     font-size: 24px;
     line-height: 29px;
     color: #000000;
     margin-bottom: 12px;
 }
-.link-footer {
+.footer_link {
     font-weight: 500;
     font-size: 14px;
     line-height: 17px;
     color: #888888;
     text-decoration: none;
 }
-.link-footer:hover {
+.footer_link:hover {
     color: gray;
 }
-.form-footer {
+.form_text {
     font-size: 14px;
     line-height: 16px;
     color: #000000;
     margin-bottom: 16px;
 }
-.form-input-footer {
+.form_email {
     background: #FFFFFF;
     border: 1px solid #C4C4C4;
     box-sizing: border-box;
@@ -99,7 +96,7 @@ a {
     line-height: 18px;
     color: #C4C4C4;
 }
-.button-footer {
+.form_button {
     background: rgba(222, 215, 215, 0.41);
     border: 1px solid #FFFFFF;
     box-sizing: border-box;
